<resources>
    <string name="app_name">MovieApp</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vote">Vote:</string>
    <string name="vote_count">Vote Count:</string>
    <string name="vote_aveage">Vote Average:</string>
    <string name="revenue">Revenue:</string>
    <string name="popularity">Populaity:</string>
    <string name="duration">Duration:</string>
    <string name="overview">Overview:</string>
</resources>